worked on mobile devices, fixed bugs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -487,7 +487,7 @@ ul.slick-dots {
 /* Request Form */
 
 .request-form {
-	background-color: #BC835E;
+	background-color: #CBB26A;
 	padding: 40px 0px;
 	color: #fff;
 }
@@ -743,7 +743,7 @@ background-color: #000;
 }
 
 .callback-form .contact-form {
-	background-color: #BC835E;
+	background-color: #CBB26A;
 	padding: 60px;
 	border-radius: 5px;
 	text-align: center;
@@ -823,7 +823,7 @@ background-color: #000;
 }
 
 .contact-us .contact-form button.filled-button {
-	background-color: #BC835E;
+	background-color: #be9e44;
 	color: #fff;
 	border: none;
 	font-size: 13px;
@@ -930,10 +930,11 @@ footer ul.menu-list li a {
 	font-size: 14px;
 	color: #fff;
 	transition: all 0.3s;
+
 }
 
 footer ul.menu-list li a:hover {
-	color: #BC835E;
+	color: #CBB26A;
 }
 
 footer .contact-form input {
@@ -994,7 +995,7 @@ footer .contact-form ::placeholder {
 footer .contact-form button.filled-button {
 	background-color: transparent;
 	color: #fff;
-	background-color: #BC835E;
+	background-color: #CBB26A;
 	border: none;
 	font-size: 13px;
 	text-transform: uppercase;
@@ -1180,7 +1181,7 @@ footer .contact-form button.filled-button:hover {
 
 .contact-information .contact-item {
 	padding: 60px 30px;
-	background-color: #f7f7f7;
+	background-color: #be9e44;
 	text-align: center;
 }
 
@@ -1281,21 +1282,28 @@ footer .contact-form button.filled-button:hover {
 }
 
 @media (max-width: 992px) {
+
+.navbar-brand h2{
+	display: none;
+}
 	.navbar .navbar-brand {
 		position: absolute;
 		left: 30px;
-		top: 10px;
+		top: 40px;
+
 	}
 	.navbar .navbar-brand {
 		width: auto;
+		
 	}
-	.navbar:after {
+	.navbar:after{
 		display: none;
 	}
-	#navbarResponsive {
+	#navbarResponsive{
+		
 	    z-index: 99999;
 	    position: absolute;
-	    top: 80px;
+	    top: 40px;
 	    left: 0;
 	    width: 100%;
 	    text-align: center;
@@ -1320,4 +1328,26 @@ footer .contact-form button.filled-button:hover {
 		color: #BC835E!important;
 		border-bottom: none!important;
 	}
+	.left-content h2{
+		font-size: 28px;
+		text-align: center;
+		padding: 0 18px 0 18px;
+		margin:0;
+	}
+	.left-content p{
+		padding: 18px;
+		text-align:justify;
+	}
+	.right-content span{
+		text-align: center;
+		font-size: 18px;
+	}.right-content h2{
+		text-align: center;
+	}
+	.right-content p{
+		font-size: 18px;
+		text-align: justify;
+		margin:0;
+	}
+
 }
